# SDL_Pong

./: .gitignore  CMakeLists.txt  README.md  main.cpp
entity/: CMakeLists.txt
entity/include/: ball.hpp  entity.hpp  paddle.hpp
entity/src/: ball.cpp  entity.cpp  paddle.cpp
game_window/: CMakeLists.txt
game_window/include/: game_window.hpp
game_window/src/: game_window.cpp
input/: CMakeLists.txt
input/include/: input.hpp
input/src/: input.cpp
